# pynote

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyter-config/server-config/: pynote.json
pynote/: __init__.py  _env.py  claude.py  handlers.py
schema/: plugin.json
scripts/: check_no_secrets.py  mock_flow_test.py  smoke_test.py
src/: ChatPanel.tsx  api.ts  index.ts  notebookOps.ts  types.ts  widget.tsx
style/: index.css
